fix: icon dark mode

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -119,7 +119,7 @@ html {
   margin-left: 1rem;
 }
 .nav-item-darkMode{
-  margin-left: 2.5rem;
+  margin-left: 1rem;
 }
 
 .cover {
